* fix not centered player control bar

--- a/style.less
+++ b/style.less
@@ -630,8 +630,8 @@ progress::-moz-progress-bar {
 
 .playerControlBar {
     padding-top: 8px;
-    width: ~"calc(50% - 60px)";
-    padding-left: ~"calc(50% - 60px)";
+    width: 50%;
+    padding-left: ~"calc(50% - 120px)";
     span {
         float: left;
         &:nth-child(n+1) {
